[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/Powerups/HookShotPowerup.gd" type="Script" id=1]
[ext_resource path="res://Objects/Powerups/PowerupBox.png" type="Texture" id=2]
[ext_resource path="res://Hookshot/HookShot.png" type="Texture" id=3]
[ext_resource path="res://Particles/ClinkFx.png" type="Texture" id=4]
[ext_resource path="res://Objects/Powerups/Edited Boost.wav" type="AudioStream" id=5]



[sub_resource type="Curve" id=1]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.23
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 112.68
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 4.6
scale = 0.3
scale_curve = SubResource( 4 )
color = Color( 2.31, 1.17, 0, 1 )
hue_variation_random = 0.02
hue_variation_curve = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 55.5712
height = 15.4469

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.478431, 0.945098, 0.921569, 1 ) ]
}

[node name="HookShotPowerup" type="Node2D"]

[node name="HookShotPowerup" type="Area2D" parent="."]
modulate = Color( 0.582745, 0.956078, 0.937255, 1 )
position = Vector2( 0, 5 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="HookShotPowerup"]
scale = Vector2( 5, 5 )
emitting = false
amount = 32
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="HookShotPowerup"]
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="HookShotPowerup/Sprite"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HookShotPowerup"]
visible = false
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HookShotPowerup"]
autoplay = "Hover"
anims/Hover = SubResource( 7 )

[node name="ParticleTimer" type="Timer" parent="HookShotPowerup"]
wait_time = 0.3
one_shot = true

[node name="RespawnTimer" type="Timer" parent="HookShotPowerup"]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HookShotPowerup"]
stream = ExtResource( 5 )
volume_db = -10.097
pitch_scale = 2.0
bus = "SFX"
[connection signal="body_entered" from="HookShotPowerup" to="HookShotPowerup" method="_on_HookShotPowerup_body_entered"]
[connection signal="timeout" from="HookShotPowerup/ParticleTimer" to="HookShotPowerup" method="_on_ParticleTimer_timeout"]
[connection signal="timeout" from="HookShotPowerup/RespawnTimer" to="HookShotPowerup" method="_on_RespawnTimer_timeout"]
